# OptiSim

./: .gitignore  404.html  Doxyfile  README.md  index.html  mkdocs.yml  objects.inv
CPP/: CMakeLists.txt  Lens.cpp  Lens.h  OpticalObject.cpp  OpticalObject.h  OpticatObject.h  ThickLens.cpp  ThickLens.h  ThinLens.cpp  ThinLens.h  linux_run.sh  main.cpp
CPP/docs/html/: Image_8cpp.html  Image_8cpp__incl.dot  Image_8cpp_source.html  Image_8h.html  Image_8h__dep__incl.dot  Image_8h__incl.dot  Image_8h_source.html  ImagingSubject_8cpp.html  ImagingSubject_8cpp__incl.dot  ImagingSubject_8cpp_source.html  ImagingSubject_8h.html  ImagingSubject_8h__dep__incl.dot  ImagingSubject_8h_source.html  Lens_8cpp.html  Lens_8cpp__incl.dot  Lens_8cpp_source.html  Lens_8h.html  Lens_8h__dep__incl.dot  Lens_8h__incl.dot  Lens_8h_source.html  LightSource_8cpp.html  LightSource_8cpp__incl.dot  LightSource_8cpp_source.html  LightSource_8h.html  LightSource_8h__dep__incl.dot  LightSource_8h__incl.dot  LightSource_8h_source.html  OptiSimError_8cpp.html  OptiSimError_8cpp__incl.dot  OptiSimError_8cpp_source.html  OptiSimError_8h.html  OptiSimError_8h__dep__incl.dot  OptiSimError_8h__incl.dot  OptiSimError_8h_source.html  OptiSimVersion_8cpp.html  OptiSimVersion_8cpp__incl.dot  OptiSimVersion_8cpp_ad37800eb0ba56e73d779eacf5d18a301_icgraph.dot  OptiSimVersion_8cpp_source.html  OptiSimVersion_8h.html  OptiSimVersion_8h__dep__incl.dot  (+116 more)
CPP/docs/html/search/: all_0.js  all_3.js  all_6.js  all_8.js  all_b.js  all_c.js  classes_0.js  classes_4.js  searchdata.js  variables_6.js
CPP/include/: Image.h  ImagingSubject.h  Lens.h  LightSource.h  OptiSim.h  OptiSimError.h  OptiSimVersion.h  OpticalObject.h  OpticalSystem.h  ThickLens.h  ThinLens.h
CPP/json_files/: fake.json  input.json  input_no_thick.json  optical_system.json  save_after_modification.json
CPP/src/: Image.cpp  ImagingSubject.cpp  Lens.cpp  LightSource.cpp  OptiSim.cpp  OptiSimError.cpp  OptiSimVersion.cpp  OpticalObject.cpp  OpticalSystem.cpp  ThickLens.cpp  ThinLens.cpp  main.cpp
Java/optisim_java/: DrawingPanel.java  ElementListPanel.java  OptiSim.java  OptiSimError.java  OpticalSimulatorGUI.java  OpticalSystem.java
Python/: CMakeLists.txt  OptiSim.py  Test.py
Python/bind/: bind_imaging_subjects.cpp  bind_optical_objects.cpp  bind_optical_system.cpp  optisim_bindings.cpp
Python/json_files/: optical_system.json
Run/: run.sh
Test/CPP/: CMakeLists.txt  test.cpp
Test/Python/: test.py
api/: index.html
architecture/: index.html
cpp/html/: CMakeCXXCompilerId_8cpp.html  CPP_2build_2CMakeFiles_23_828_83_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp_source.html  Image_8cpp.html  Image_8cpp__incl.dot  Image_8h__dep__incl.dot  Image_8h__incl.dot  Image_8h_source.html  ImagingSubject_8cpp__incl.dot  ImagingSubject_8cpp_source.html  ImagingSubject_8h__dep__incl.dot  ImagingSubject_8h_source.html  Lens_8cpp.html  (+170 more)
dev_guide/: index.html
docs/: api.md  architecture.md  dev_guide.md  examples.md  index.md  install.md  python_api.md  requirement.md  user_guide.md  video.md
examples/: example  example.cpp  example.py  index.html
install/: index.html
python_api/: index.html
requirement/: index.html
search/: search_index.json
user_guide/: index.html
video/: index.html
(+410 files in other folders)
